<resources>
    <string name="app_name">Abra-Kadabra</string>
    <string name="omg_what_is_that">OMG, What is That</string>
    <string name="ok_here_we_go">OK, here we go</string>
    <string name="loading">Loading: %d%%</string>
    <string name="button_one">Button One</string>
    <string name="button_two">Action Two</string>
    <string name="button_three">Action Three</string>
    <string name="menu">MENU</string>
    <string name="hello_funny_animation">Hello, funny animation!</string>
    <string name="todo">TODO</string>
    <string name="some_text">Some Text</string>
    <string name="update">Обновить</string>
    <string name="wait">Пожалуйста, подождите</string>
    <string name="user_name_string">User Name:</string>
    <string name="gender_string">Gender:</string>
    <string name="location_string">Location:</string>
    <string name="login_string">Login:</string>
    <string name="email_string">Email:</string>
    <string name="date_of_birth_string">Date of Birth:</string>
    <string name="registered_string">Registered:</string>
    <string name="phone_string">Phone:</string>
    <string name="cell_string">Cell:</string>
    <string name="id_string">ID:</string>
    <string name="nationality_string">Nationality:</string>
    <string name="random_person">Random Person</string>
    <string name="hello_it_s_retrofit">Hello, it\'s Retrofit!</string>
    <string name="to_retrofit_example">To Retrofit example</string>
</resources>