<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MenuDisplay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/please_wait_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wait"
            android:textSize="25sp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginTop="12dp"
            android:visibility="visible"
            tools:ignore="InefficientWeight">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatar"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/title_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/random_person"
                android:textSize="16sp"
                android:layout_marginTop="6dp"
                app:layout_constraintBottom_toTopOf="@id/name_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/user_name_string"
                app:layout_constraintBottom_toTopOf="@+id/avatar"
                app:layout_constraintEnd_toStartOf="@+id/user_name"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@id/title_screen" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/name_title"
                app:layout_constraintTop_toTopOf="@+id/name_title"
                tools:text="Mr Who Is Who" />

            <TextView
                android:id="@+id/gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_string"
                app:layout_constraintEnd_toStartOf="@+id/user_gender"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@id/avatar" />

            <TextView
                android:id="@+id/user_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/gender_title"
                app:layout_constraintTop_toTopOf="@+id/gender_title"
                tools:text="Male" />

            <TextView
                android:id="@+id/nat_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality_string"
                app:layout_constraintEnd_toStartOf="@+id/user_name"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/gender_title"
                app:layout_constraintTop_toBottomOf="@id/gender_title" />

            <TextView
                android:id="@+id/user_nat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/nat_title"
                app:layout_constraintTop_toTopOf="@+id/nat_title"
                tools:text="RUS" />

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                app:layout_constraintEnd_toStartOf="@+id/user_login"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/nat_title"
                app:layout_constraintTop_toBottomOf="@id/nat_title" />

            <TextView
                android:id="@+id/user_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lines="2"
                app:layout_constraintStart_toEndOf="@id/login_title"
                app:layout_constraintTop_toTopOf="@+id/login_title"
                tools:text="Nik" />

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_string"
                app:layout_constraintEnd_toStartOf="@+id/user_location"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/login_title"
                app:layout_constraintTop_toBottomOf="@+id/user_login" />

            <TextView
                android:id="@+id/user_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/phone_title"
                app:layout_constraintTop_toTopOf="@+id/phone_title"
                tools:text="+712345" />

            <TextView
                android:id="@+id/cell_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_string"
                app:layout_constraintEnd_toStartOf="@+id/user_cell"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/phone_title"
                app:layout_constraintTop_toBottomOf="@+id/phone_title" />

            <TextView
                android:id="@+id/user_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/cell_title"
                app:layout_constraintTop_toTopOf="@+id/cell_title"
                tools:text="+712345" />

            <TextView
                android:id="@+id/location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location_string"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <TextView
                android:id="@+id/user_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lines="8"
                app:layout_constraintStart_toEndOf="@id/location_title"
                app:layout_constraintTop_toTopOf="@+id/location_title"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/id_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_string"
                app:layout_constraintEnd_toStartOf="@+id/user_id"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/location_title"
                app:layout_constraintTop_toBottomOf="@+id/user_location" />

            <TextView
                android:id="@+id/user_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/id_title"
                app:layout_constraintTop_toTopOf="@+id/id_title"
                tools:text="ABC" />

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_string"
                app:layout_constraintEnd_toStartOf="@+id/user_nat"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@+id/id_title"
                app:layout_constraintTop_toBottomOf="@+id/id_title" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/email_title"
                app:layout_constraintTop_toTopOf="@+id/email_title"
                tools:text="fff@fff.ff" />

            <TextView
                android:id="@+id/dob_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_string"
                app:layout_constraintEnd_toStartOf="@+id/user_email"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/email_title"
                app:layout_constraintTop_toBottomOf="@id/email_title" />

            <TextView
                android:id="@+id/user_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@id/dob_title"
                app:layout_constraintTop_toTopOf="@+id/dob_title"
                tools:text="01.01.2000" />

            <TextView
                android:id="@+id/registered_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered_string"
                app:layout_constraintEnd_toStartOf="@+id/user_dob"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/dob_title"
                app:layout_constraintTop_toBottomOf="@id/user_dob" />


            <TextView
                android:id="@+id/user_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:lines="2"
                app:layout_constraintStart_toEndOf="@id/registered_title"
                app:layout_constraintTop_toTopOf="@+id/registered_title"
                tools:text="01.01.2000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/update" />
    </LinearLayout>


    <!--Invisible initial layout-->
    <LinearLayout
        android:id="@+id/revealLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/hello_it_s_retrofit"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="#EAD201"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>


